Content & CSS styling added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="resources/style.css">
+<!-- <link rel="stylesheet" type="text/css" href="path/to/font-awesome/css/font-awesome.min.css">-->
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="resources/style.css">
 </head>
 <body>
     <header>
         <p class="title">Discover hidden places in the world around you</p>
-        <a class="link" href="https://77c15c5e48a14e44933605a5dd8c07d0.cc-propeller.cloud/#"><p>Download Excursion (Coming soon!)</p></a>
+        <a class="link" href="./index.html"><p>Download Excursion (Coming soon!)</p></a>
     </header>
+    <div class="main-content">
+        <div class="video">
+            <video autoplay loop muted>
+                <source src="./resources/ImgVid/Iphone Video.mp4" type="video/mp4">
+            </video>
+        </div>
+        <p class="header">Your personal travel guide</p>
+        <div>
+            <p class="translucent">Excursion remembers places you like, and recommends new points of interest around you</p>
+            <img src="./resources/ImgVid/landscape.jpg">
+        </div>
+        <br>
+        <footer>
+            <img src="./resources/ImgVid/phoneicon.png">
+            <p class="header">Coming Soon for iPhone and Android</p>
+            <a class="link" href="./index.html"><p>Download Excursion (Coming soon!)</p></a>
+            <div class="translucent">
+                <div class="copyright">
+                    <i class="fa fa-copyright" aria-hidden="true"></i>
+                    <p>Excursion</p>
+                </div>
+            </div>  
+        </footer>
+    </div>
 </body>
 </html>
